src/objects/Saved_Company__c.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <label>System Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Saved_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Saved Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Saved Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>